Adds my version of the transitions library

--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ dependencies {
 	api "space.earlygrey:shapedrawer:$shapeDrawerVersion"
 	api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
+	implementation 'com.github.lavaeater:libgdx-screenmanager:c9e1acb870'
 }
