--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,5 @@ dependencies {
 	api "com.github.Hangman:TuningFork:$tuningForkVersion"
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.7.20'
 	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
-
+	api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
 }
