--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	api "space.earlygrey:shapedrawer:$shapeDrawerVersion"
 	api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
 	api "com.github.Hangman:TuningFork:$tuningForkVersion"
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.7.20'
-	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinSerializationVersion"
 	api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
 }
