--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ dependencies {
 	api "com.badlogicgames.ashley:ashley:$ashleyVersion"
 	api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
 	api "com.badlogicgames.gdx:gdx:$gdxVersion"
-	api "com.badlogicgames.gdx:gdx-ai:$gdxAiVersion"
+	api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
 	api "io.github.libktx:ktx-actors:$ktxVersion"
 	api "io.github.libktx:ktx-app:$ktxVersion"
 	api "io.github.libktx:ktx-ashley:$ktxVersion"
@@ -27,7 +27,8 @@ dependencies {
 	api "space.earlygrey:shapedrawer:$shapeDrawerVersion"
 	api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
 	api "com.github.Hangman:TuningFork:$tuningForkVersion"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
 	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinSerializationVersion"
+  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
 	api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
 }
